@@ -1,3 +1,8 @@
+11/04/2013:
+	- Several fixes to Kakadu.cc. To force resolution levels to be floor(x/2) rather than the default
+	  ceil(x/2) to match how TIFF resolutions are created. Also modification to force 16 bit
+	  JPEG2000 to unsigned output. And also fix to strip alpha channels from images.
+
 
 14/03/2013:
 	- Fix to gamma conversion - thanks Chiara Marmo
